force-app/main/default/objects/ArdiraSurvey__Ardira_AWS_Conf__c/ArdiraSurvey__Ardira_AWS_Conf__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configuration settings to manage AWS S3 Bucket.</description>
    <label>SurveyVista AWS Configuration</label>
</CustomObject>