force-app/main/default/objects/ArdiraSurvey__Ardira_AWS_Conf__c/fields/ArdiraSurvey__Amazon_S3_Delete__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Amazon_S3_Delete__c</fullName>
    <description>Amazon S3 delete named credentials name</description>
    <inlineHelpText>Amazon S3 delete named credentials name</inlineHelpText>
    <label>Amazon S3 Delete</label>
    <length>80</length>
    <type>Text</type>
</CustomField>