force-app/main/default/objects/ArdiraSurvey__Ardira_AWS_Conf__c/fields/ArdiraSurvey__Amazon_S3_Download__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Amazon_S3_Download__c</fullName>
    <description>Amazon S3 download named credentials name.</description>
    <inlineHelpText>Amazon S3 download named credentials name,</inlineHelpText>
    <label>Amazon S3 Download</label>
    <length>80</length>
    <type>Text</type>
</CustomField>