force-app/main/default/objects/ArdiraSurvey__Ardira_AWS_Conf__c/fields/ArdiraSurvey__Amazon_S3_Upload__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Amazon_S3_Upload__c</fullName>
    <description>Amazon S3 upload named credentials name.</description>
    <inlineHelpText>Amazon S3 upload named credentials name.</inlineHelpText>
    <label>Amazon S3 Upload</label>
    <length>80</length>
    <type>Text</type>
</CustomField>