force-app/main/default/objects/ArdiraSurvey__Ardira_AWS_Conf__c/fields/ArdiraSurvey__S3_Bucket_Name__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__S3_Bucket_Name__c</fullName>
    <description>Amazon S3 bucket name.</description>
    <inlineHelpText>Amazon S3 bucket name.</inlineHelpText>
    <label>S3 Bucket Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>